# notes

./: #focusing-on-patterns.md#  .dockerignore  .gitignore  .notes_password  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  focusing-on-patterns.md  focusing-on-patterns.md~  honeycomb.md  seccomp-profile.json
content/: 10027548.md  10528923.md  1586251.md  1592872.md  4536141.md  5230591.md  569607.md  580029.md  642949.md  6876024.md  6877529.md  750599.md  7516069.md  7757447.md  8425196.md  8425198.md  8855452.md  9370332.md  9458727.md  ALCANTARA201239.md  AMD_2024.md  Aref:2015.md  Barthels:2017:DJA:3055540.3055545.md  Bartholomew2017.md  Bauman2018SupersetDS.md  Bravenboer:2009.md  Bui2014a.md  Byna:HDF5:Subfiling.md  CHENG2018127.md  Cacace:1991:OPS:111828.111831.md  Cheiney:1990:PST:94362.94445.md  Clarkson:2014.md  CodeSurfer.md  Corporation_2019.md  Cowley2018.md  Davis:2011:UFS:2049662.2049663.md  EngelVerbeekRavindran23.md  Freek2002.md  GPU-join-7-years.md  GPU-join-revisited.md  (+656 more)
content/10.1007/: 978-3-319-41540-6.md
content/10.1145/: 1067445.1067472.md  173262.155095.md  3093336.3037744.md  3460872.md  3510457.3513081.md  3570638.md  360204.360210.md  502807.502810.md
content/project-ideas/: rust-notes-app.md
src/: auth.rs  citations.rs  citations_test.rs  graph.rs  graph_index.rs  graph_query.rs  handlers.rs  lib.rs  main.rs  models.rs  notes.rs  shared.rs  smart_add.rs  templates.rs  url_validator.rs
src/templates/: components.rs  editor.rs  graph_js.rs  mod.rs  shared_editor.rs  styles.rs  viewer.rs
tests/fixtures/: gilray2016p4f.txt  jordan2016souffle.txt  might2010mcfa.txt  scholz2016.txt  vanhorn2010.txt  willsey2021eqsat.txt
