[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
hex-literal = "0.4"
walkdir = "2"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
urlencoding = "2"
tower-http = { version = "0.6", features = ["fs"] }
subtle = "2.5"
base64 = "0.22"
ammonia = "4"
