[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
argon2 = "0.5"
hex-literal = "0.4"
walkdir = "2"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
urlencoding = "2"
tower-http = { version = "0.6", features = ["fs"] }
ammonia = "4"
automerge = "0.5"
futures-util = "0.3"
rayon = "1"
ascent = "0.8"
pdf-extract = "0.10.0"
